2008-07-25  Chong Yidong  <cyd@stupidchicken.com>

	* term.c (syms_of_term): Initialize default_orig_pair,
	default_set_foreground, and default_set_background.

	* getloadavg.c (nl): Rename to name_list to avoid ncurses.h
	clash (bug#86).
	(getloadavg): Callers changed.

	* image.c (svg_load_image): Fix last change.
	(svg_load_image): Use rsvg_handle_get_dimensions to check that
	image size is valid.  Use g_object_unref instead of deprecated
	rsvg_handle_free to free rsvg handle.
	(x_from_xcolors): Don't initialize pixmap (silence compiler).

2008-07-25  Jason Rumney  <jasonr@gnu.org>

        * w32font.c (w32font_encode_char): Encode characters outside BMP as
        surrogates before looking up glyph index.
        (w32font_text_extents): Encode as surrogates if falling back to
        functions that need UTF-16 wide chars.

        * w32uniscribe.c (uniscribe_encode_char): Encode characters outside
        BMP as surrogates before looking up glyph index.

2008-07-25  Chong Yidong  <cyd@stupidchicken.com>

	* image.c (svg_load_image): Check for failure in return value of
	rsvg_handle_get_pixbuf.  Free rsvg handle when done.

2008-07-25  Jason Rumney  <jasonr@gnu.org>

        * w32font.c (Fx_select_font): Reverse sense of second arg.

2008-07-24  Stefan Monnier  <monnier@iro.umontreal.ca>

	* syntax.c (struct lisp_parse_state, char_quoted, inc_bytepos)
	(dec_bytepos, find_defun_start): Use EMACS_INT for buffer positions.

	* puresize.h (PURESIZE_CHECKING_RATIO): New macro.
	(PURESIZE): Use it.

2008-07-24  Dan Nicolaescu  <dann@ics.uci.edu>

	* m/amdx86-64.h (HAVE_LIB64_DIR): Consolidate ifdefs.
	* m/alpha.h (TEXT_END):
	* m/ibmrs6000.h (TEXT_END):
	* m/macppc.h (TEXT_END):
	* s/darwin.h (TEXT_END):
	* s/msdos.h (TEXT_END): Remove, unused.
	* s/gnu-linux.h (BSD_PGRPS): Add a comment.
	* s/cygwin.h: Remove comment.

	* ecrt0.c (NODOT_GLOBAL_START): Remove code, unused.
	(DOT_GLOBAL_START): Remove conditional, redundant for CRT0_DUMMIES.