@@ -1,3 +1,14 @@
+2008-07-25  Jason Rumney  <jasonr@gnu.org>
+
+        * w32uniscribe.c (uniscribe_shape): Pass NULL for control arg to
+        ScriptItemize. Clean up return value checking. Remove unused
+        variables.
+        (uniscribe_encode_char): Encode non-BMP characters with uniscribe
+        shaping engine.
+
+        * w32font.c (w32font_has_char): Handle the case where we can't
+        determine the script for a character.
+
 2008-07-25  Chong Yidong  <cyd@stupidchicken.com>
 
 	* term.c (syms_of_term): Initialize default_orig_pair,
